# cpp-design-patterns

./: .gitignore  CMakeLists.txt  README.md
behavioral/: CMakeLists.txt
behavioral/chain_of_responsibility/: CMakeLists.txt  README.md
behavioral/chain_of_responsibility/include/: Developer.h  HelpDesk.h  Manager.h  SupportHandler.h  TechnicalSupport.h  Ticket.h
behavioral/chain_of_responsibility/src/: main.cpp
behavioral/chain_of_responsibility/test/: CMakeLists.txt  test_chain.cpp
structural/: CMakeLists.txt
